--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "14.0.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.5",
-    "expo-status-bar": "~1.11.1",
+    "expo-camera": "~14.0.3",
+    "expo-constants": "^15.4.5",
+    "expo-image-manipulator": "^11.8.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-status-bar": "^1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-safe-area-context": "^4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
